# fetch

./: Makefile  README.md  pyproject.toml  requirements.txt
src/fetch/: main.py
